--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 <script src="http://connect.facebook.net/en_US/all.js"></script>
 <script>
     FB.init({ 
-        appId:'197856283615779', cookie:true, 
+        appId:197856283615779, cookie:true, 
         status:true, xfbml:true, oauth:true
     });
 </script>
