--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div id="fb-root"></div>
+<script src="http://connect.facebook.net/en_US/all.js"></script>
+<script>
+    FB.init({ 
+        appId:'YOUR_APP_ID', cookie:true, 
+        status:true, xfbml:true, oauth:true
+    });
+    </script>
+
+    <fb:add-to-timeline></fb:add-to-timeline>
+
+    <h3>
+        <font size="30" face="verdana" color="grey">
+             Stuffed Cookies
+        </font> 
+    </h3> 
+    <p>
+        <img title="Stuffed Cookies" 
+                        src="http://fbwerks.com:8000/zhen/cookie.jpg" 
+                        width="550"/><br />
+    </p>
+    <form>
+        <input type="button" value="Cook" onclick="postCook()" />
+    </form>
