--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <script src="http://connect.facebook.net/en_US/all.js"></script>
 <script>
     FB.init({ 
-        appId:'YOUR_APP_ID', cookie:true, 
+        appId:197856283615779, cookie:true, 
         status:true, xfbml:true, oauth:true
     });
     </script>
