Trying this all on one page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,56 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"
+     xmlns:fb="https://www.facebook.com/2008/fbml"> 
+
+<head prefix="og: http://ogp.me/ns# matthewliu: 
+            http://ogp.me/ns/apps/matthewliu#"> 
+    <meta property="fb:app_id" content="197856283615779" /> 
+    <meta property="og:type" content="matthewliu:recipe" /> 
+    <meta property="og:title" content="Stuffed Cookies" /> 
+    <meta property="og:image" content="http://example.com/cookie.jpg" /> 
+    <meta property="og:description" content="The Turducken of Cookies" /> 
+    <meta property="og:url" content="http://example.com/cookie.html"> 
+
+    <script type="text/javascript">
+    function postCook()
+    {
+        FB.api('/me/matthewliu:cook' + 
+                    '&recipe=http://example.com/cookie.html','post',
+                    function(response) {
+            if (!response || response.error) {
+                    alert('Error occured');
+            } else {
+                alert('Post was successful! Action ID: ' + response.id);
+                }
+        });
+    }
+    </script>
+</head> 
+
+<body> 
+    <div id="fb-root"></div>
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script>
+        FB.init({ 
+            appId:'197856283615779', cookie:true, 
+            status:true, xfbml:true, oauth:true
+        });
+        </script>
+
+        <fb:add-to-timeline></fb:add-to-timeline>
+
+        <h3>
+            <font size="30" face="verdana" color="grey">
+                Stuffed Cookies
+            </font> 
+        </h3> 
+        <p>
+            <img title="Stuffed Cookies" 
+                            src="http://example.com/cookie.jpg" 
+                            width="550"/><br />
+        </p>       
+
+        <form>
+            <input type="button" value="Cook" onclick="postCook()" />
+        </form>
+    </body> 
+    </html>
